# Awesome-Bitcoin-Internals

./: .gitignore  ADVANCED_FEATURES.md  Cargo.toml  README.md  USAGE_GUIDE.md  config.example.toml
.github/workflows/: ci.yml  pages.yml
benches/: mining_bench.rs  transaction_bench.rs
docs/: README.md  book-en.toml  book.toml
docs/assets/: demo.cast  record_demo.sh
docs/en/: SUMMARY.md
docs/en/advanced/: merkle.md  multisig.md  priority.md  rbf.md  timelock.md
docs/en/api/: advanced-tx.md  advanced.md  block.md  blockchain.md  core.md  merkle.md  multisig.md  rest.md  transaction.md  utxo.md  wallet.md
docs/en/appendix/: bitcoin-principles.md  contributing.md  faq.md  glossary.md
docs/en/examples/: enterprise-multisig.md  escrow.md  timelock-savings.md
docs/en/guide/: architecture.md  blockchain.md  concepts.md  installation.md  quickstart.md  transactions.md  utxo.md  wallet.md
docs/en/introduction/: README.md
docs/src/: SUMMARY.md
docs/src/advanced/: merkle.md  multisig.md  priority.md  rbf.md  timelock.md
docs/src/api/: advanced-tx.md  advanced.md  block.md  blockchain.md  core.md  merkle.md  multisig.md  rest-api.md  rest.md  transaction.md  utxo.md  wallet.md
docs/src/appendix/: bitcoin-principles.md  contributing.md  faq.md  glossary.md
docs/src/examples/: enterprise-multisig.md  escrow.md  timelock-savings.md
docs/src/guide/: architecture.md  blockchain.md  concepts.md  installation.md  quickstart.md  transactions.md  utxo.md  wallet.md
docs/src/introduction/: README.md
examples/: enterprise_multisig.rs  escrow_service.rs  timelock_savings.rs
frontend/: README.md  app.js  index.html  main.js  package.json  styles.css
scripts/: dev.sh  pre-commit.sh
src/: advanced_tx.rs  block.rs  blockchain.rs  config.rs  crypto.rs  error.rs  indexer.rs  lib.rs  logging.rs  main.rs  mempool.rs  merkle.rs  multisig.rs  network.rs  parallel_mining.rs  persistence.rs  script.rs  security.rs  spv.rs  storage.rs  transaction.rs  utxo.rs  wallet.rs
static/: index.html
tests/: integration_test.rs
tests/common/: mod.rs
