[package]
name = "bitcoin_simulation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btc-server"
path = "src/bin/server.rs"

[[bin]]
name = "btc-demo"
path = "src/main.rs"

[dependencies]
# 核心依赖
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 异步运行时和Web框架
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
# 测试框架
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"

[lib]
name = "bitcoin_simulation"
path = "src/lib.rs"