[package]
name = "simplebtc"
version = "1.0.0"
edition = "2021"
authors = ["Geoffrey Wang <geoffreywang1117@gmail.com>"]
description = "A complete Bitcoin blockchain implementation for education — UTXO, PoW, Merkle trees, multisig, and more"
repository = "https://github.com/GeoffreyWang1117/SimpleBTC"
license = "MIT"
keywords = ["bitcoin", "blockchain", "cryptocurrency", "education", "rust"]
categories = ["cryptography", "simulation"]
readme = "README.md"

[[bin]]
name = "btc-server"
path = "src/bin/server.rs"

[[bin]]
name = "btc-node"
path = "src/bin/node.rs"

[[bin]]
name = "btc-demo"
path = "src/main.rs"

[lib]
name = "bitcoin_simulation"
path = "src/lib.rs"

[dependencies]
# Core
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Cryptography (real Bitcoin signatures)
secp256k1 = { version = "0.29", features = ["rand", "serde"] }
bitcoin_hashes = "0.14"
bech32 = "0.11"
ripemd = "0.1"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage (high-performance database)
rocksdb = "0.22"

# Parallel computing
rayon = "1.10"
num_cpus = "1.16"

# Data structures
ordered-float = "4.5"

# Async runtime & web framework
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.13"

[[bench]]
name = "mining_bench"
harness = false

[[bench]]
name = "transaction_bench"
harness = false
